--- a/Capstone/src/TransactionsPanel.form
+++ b/Capstone/src/TransactionsPanel.form
@@ -1,44 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="TransactionsPanel">
-  <grid id="27dc6" binding="contentPane" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="contentPane" layout-manager="GridLayoutManager" row-count="6" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="589" height="402"/>
+      <xy x="20" y="20" width="675" height="839"/>
     </constraints>
     <properties>
-      <preferredSize width="600" height="450"/>
+      <background color="-854793"/>
+      <preferredSize width="600" height="600"/>
+      <requestFocusEnabled value="true"/>
     </properties>
     <border type="none"/>
     <children>
       <component id="3e662" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-14013132"/>
           <font size="28" style="1"/>
-          <text value="Transaction"/>
-        </properties>
-      </component>
-      <component id="ea23a" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Transaction History"/>
+          <text value="Transactions"/>
         </properties>
       </component>
       <scrollpane id="f9f9d" binding="scroll">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="1" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="7" vsize-policy="7" hsize-policy="7" anchor="1" fill="1" indent="1" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-16777216"/>
+          <background color="-854793"/>
+          <enabled value="true"/>
           <visible value="true"/>
           <wheelScrollingEnabled value="true"/>
         </properties>
         <border type="none"/>
         <children>
-          <component id="9caa3" class="javax.swing.JTable" binding="table1" default-binding="true">
+          <component id="9caa3" class="javax.swing.JTable" binding="table" default-binding="true">
             <constraints/>
             <properties>
               <autoCreateRowSorter value="true"/>
@@ -48,16 +44,149 @@
           </component>
         </children>
       </scrollpane>
+      <grid id="9d4fb" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="10" left="10" bottom="10" right="10"/>
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="1" use-parent-layout="false">
+            <minimum-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-13726737"/>
+        </properties>
+        <border type="none" title=""/>
+        <children>
+          <component id="d9310" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="89" height="17"/>
+              </grid>
+            </constraints>
+            <properties>
+              <foreground color="-854793"/>
+              <text value="Total Transactions"/>
+            </properties>
+          </component>
+          <component id="7c4b2" class="javax.swing.JLabel" binding="totalTransactionsLabel">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="89" height="17"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-854793"/>
+              <foreground color="-854793"/>
+              <text value="Label"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
       <component id="87105" class="javax.swing.JTextField" binding="searchTextField" default-binding="true">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false">
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties>
-          <text value="Search"/>
+          <caretColor color="-854793"/>
+          <text value=""/>
         </properties>
       </component>
+      <hspacer id="75e0f">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <hspacer id="27bfd">
+        <constraints>
+          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <hspacer id="71523">
+        <constraints>
+          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <grid id="bc283" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="10" left="10" bottom="10" right="10"/>
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="1" use-parent-layout="false">
+            <minimum-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-13726737"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="7264a" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="58" height="17"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-854793"/>
+              <foreground color="-854793"/>
+              <text value="Total Store Revenue"/>
+            </properties>
+          </component>
+          <component id="32ff" class="javax.swing.JLabel" binding="totalStoreRevenueLabel">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="58" height="17"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-854793"/>
+              <foreground color="-854793"/>
+              <text value="Label"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="d97c" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="10" left="10" bottom="10" right="10"/>
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="1" use-parent-layout="false">
+            <minimum-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-13726737"/>
+          <foreground color="-854793"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="eef76" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-854793"/>
+              <foreground color="-854793"/>
+              <text value="Total Consignor Share"/>
+            </properties>
+          </component>
+          <component id="300d4" class="javax.swing.JLabel" binding="totalConsignorShareLabel">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-854793"/>
+              <foreground color="-854793"/>
+              <text value="Label"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <vspacer id="e7484">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <minimum-size width="-1" height="20"/>
+          </grid>
+        </constraints>
+      </vspacer>
     </children>
   </grid>
 </form>
