--- a/Capstone/src/PayoutsPanel.form
+++ b/Capstone/src/PayoutsPanel.form
@@ -2,60 +2,55 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="PayoutsPanel">
   <grid id="27dc6" binding="content" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="896" height="671"/>
     </constraints>
-    <properties/>
+    <properties>
+      <enabled value="false"/>
+      <font size="14"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="f4581" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="0.0" weighty="0.0"/>
+          <gridbag top="10" left="25" bottom="15" right="0" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <font size="28" style="1"/>
           <text value="Payout"/>
         </properties>
       </component>
-      <hspacer id="88827">
+      <component id="93f6e" class="javax.swing.JTextField" binding="Search">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="0.0" weighty="0.0"/>
-        </constraints>
-      </hspacer>
-      <component id="93f6e" class="javax.swing.JTextField" binding="textField1" default-binding="true">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
-          <gridbag weightx="0.0" weighty="0.0"/>
+          <gridbag top="5" left="20" bottom="5" right="8" weightx="0.0" weighty="0.0" ipadx="150" ipady="10"/>
         </constraints>
-        <properties/>
+        <properties>
+          <font size="11" style="2"/>
+          <foreground color="-14013132"/>
+          <text value=""/>
+        </properties>
       </component>
       <component id="e0ec4" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="0.0" weighty="0.0"/>
+          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
+          <font size="20" style="1"/>
           <text value="History"/>
         </properties>
       </component>
-      <component id="32df0" class="javax.swing.JTextPane" binding="TotalPayout">
+      <scrollpane id="aa21c" binding="ScrollHistory">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-          <gridbag weightx="0.0" weighty="0.0"/>
+          <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <gridbag top="10" left="20" bottom="10" right="20" weightx="20.0" weighty="20.0" ipadx="20" ipady="20"/>
         </constraints>
-        <properties/>
-      </component>
-      <scrollpane id="aa21c">
-        <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-          <gridbag top="10" left="10" bottom="10" right="10" weightx="20.0" weighty="20.0" ipadx="20" ipady="20"/>
-        </constraints>
-        <properties/>
+        <properties>
+          <foreground color="-854793"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="ce85f" class="javax.swing.JTable" binding="HistoryTable">
@@ -64,44 +59,132 @@
           </component>
         </children>
       </scrollpane>
-      <vspacer id="d80cc">
-        <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="0.0" weighty="0.0"/>
-        </constraints>
-      </vspacer>
-      <component id="ebdc3" class="javax.swing.JTextPane" binding="PendingPayout">
-        <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-          <gridbag weightx="0.0" weighty="0.0"/>
-        </constraints>
-        <properties/>
-      </component>
       <component id="aa205" class="javax.swing.JLabel">
         <constraints>
-          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="0.0" weighty="0.0"/>
+          <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag top="20" left="20" bottom="5" right="5" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
+          <font size="20" style="1"/>
           <text value="Pending"/>
         </properties>
       </component>
-      <scrollpane id="e77d4">
+      <scrollpane id="e77d4" binding="ScrollPending">
         <constraints>
-          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="20.0" weighty="20.0" ipadx="20" ipady="20"/>
+          <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <gridbag top="10" left="20" bottom="10" right="20" weightx="20.0" weighty="20.0" ipadx="20" ipady="180"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="68a31" class="javax.swing.JTable" binding="table1" default-binding="true">
+          <component id="68a31" class="javax.swing.JTable" binding="PendingTable">
             <constraints/>
             <properties/>
           </component>
         </children>
       </scrollpane>
+      <grid id="60cbc" layout-manager="GridBagLayout">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
+          <gridbag top="5" left="25" bottom="5" right="10" weightx="0.0" weighty="0.0"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <grid id="9d2d3" layout-manager="GridBagLayout">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0" ipadx="50" ipady="50"/>
+            </constraints>
+            <properties>
+              <background color="-13726737"/>
+              <foreground color="-13726737"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="8ceb6" class="javax.swing.JLabel" binding="PayoutNum">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag top="5" left="0" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <background color="-13726737"/>
+                  <font size="16" style="1"/>
+                  <foreground color="-854793"/>
+                  <text value="Label"/>
+                </properties>
+              </component>
+              <component id="113c0" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <background color="-13726737"/>
+                  <foreground color="-854793"/>
+                  <text value="Total Payout"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <vspacer id="9a14e">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0" ipady="20"/>
+            </constraints>
+          </vspacer>
+          <grid id="c994a" layout-manager="GridBagLayout">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0" ipadx="50" ipady="50"/>
+            </constraints>
+            <properties>
+              <background color="-13726737"/>
+              <enabled value="false"/>
+              <foreground color="-1053210"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="35ccc" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <background color="-13726737"/>
+                  <foreground color="-854793"/>
+                  <text value="Pending Payout"/>
+                </properties>
+              </component>
+              <component id="bc08a" class="javax.swing.JLabel" binding="PendingNum">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag top="5" left="0" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <background color="-13726737"/>
+                  <font size="16" style="1"/>
+                  <foreground color="-854793"/>
+                  <text value="Label"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+        </children>
+      </grid>
+      <component id="502ee" class="javax.swing.JButton" binding="transferButton" default-binding="true">
+        <constraints>
+          <grid row="5" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag top="5" left="5" bottom="10" right="20" weightx="0.0" weighty="0.0" ipadx="10" ipady="5"/>
+        </constraints>
+        <properties>
+          <background color="-13726737"/>
+          <enabled value="true"/>
+          <foreground color="-14013132"/>
+          <hideActionText value="false"/>
+          <text value="Transfer"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
