--- a/Capstone/src/ui/PayoutsPanel.form
+++ b/Capstone/src/ui/PayoutsPanel.form
@@ -17,7 +17,7 @@
         </constraints>
         <properties>
           <font size="28" style="1"/>
-          <text value="classes.Payout"/>
+          <text value="Payout"/>
         </properties>
       </component>
       <component id="93f6e" class="javax.swing.JTextField" binding="Search" custom-create="true">
@@ -25,12 +25,12 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
-          <gridbag top="5" left="20" bottom="5" right="8" weightx="0.0" weighty="0.0" ipadx="150" ipady="10"/>
+          <gridbag top="5" left="20" bottom="0" right="8" weightx="0.0" weighty="0.0" ipadx="150"/>
         </constraints>
         <properties>
-          <font size="11" style="0"/>
+          <font style="0"/>
           <foreground color="-14013132"/>
-          <text value="Search payout"/>
+          <text value="Search Payout ID"/>
         </properties>
       </component>
       <component id="e0ec4" class="javax.swing.JLabel">
@@ -55,7 +55,9 @@
         <children>
           <component id="ce85f" class="javax.swing.JTable" binding="HistoryTable">
             <constraints/>
-            <properties/>
+            <properties>
+              <autoCreateRowSorter value="true"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
@@ -79,13 +81,15 @@
         <children>
           <component id="68a31" class="javax.swing.JTable" binding="PendingTable">
             <constraints/>
-            <properties/>
+            <properties>
+              <autoCreateRowSorter value="true"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
       <grid id="60cbc" layout-manager="GridBagLayout">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag top="10" left="25" bottom="2" right="10" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties/>
@@ -94,7 +98,7 @@
           <grid id="9d2d3" layout-manager="GridBagLayout">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.0" ipadx="50" ipady="50"/>
+              <gridbag weightx="0.0" weighty="0.0" ipadx="10" ipady="20"/>
             </constraints>
             <properties>
               <background color="-13726737"/>
@@ -102,27 +106,27 @@
             </properties>
             <border type="none"/>
             <children>
+              <component id="113c0" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag top="0" left="2" bottom="0" right="0" weightx="0.0" weighty="0.0" ipadx="110"/>
+                </constraints>
+                <properties>
+                  <background color="-13726737"/>
+                  <foreground color="-854793"/>
+                  <text value="Total Payout   "/>
+                </properties>
+              </component>
               <component id="8ceb6" class="javax.swing.JLabel" binding="PayoutNum">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag top="5" left="12" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                  <gridbag top="5" left="2" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
                   <background color="-13726737"/>
                   <font size="20" style="1"/>
                   <foreground color="-854793"/>
                   <text value="Label"/>
-                </properties>
-              </component>
-              <component id="113c0" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag weightx="0.0" weighty="0.0"/>
-                </constraints>
-                <properties>
-                  <background color="-13726737"/>
-                  <foreground color="-854793"/>
-                  <text value="Total classes.Payout   "/>
                 </properties>
               </component>
             </children>
@@ -135,8 +139,8 @@
           </vspacer>
           <grid id="c994a" layout-manager="GridBagLayout">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.0" ipadx="50" ipady="50"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0" ipadx="10" ipady="20"/>
             </constraints>
             <properties>
               <background color="-13726737"/>
@@ -147,19 +151,19 @@
             <children>
               <component id="35ccc" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag weightx="0.0" weighty="0.0"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag top="0" left="2" bottom="0" right="0" weightx="0.0" weighty="0.0" ipadx="100"/>
                 </constraints>
                 <properties>
                   <background color="-13726737"/>
                   <foreground color="-854793"/>
-                  <text value="Pending classes.Payout"/>
+                  <text value="Pending Payout"/>
                 </properties>
               </component>
               <component id="bc08a" class="javax.swing.JLabel" binding="PendingNum">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                  <gridbag top="5" left="15" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                  <gridbag top="5" left="2" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
                   <background color="-13726737"/>
